[project]
name = "leaderboard"
version = "1.0.2"

description = "Leaderboard extension for BallsDex created by gruyere"

license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [
    { name = "cewlgruyere", email = "gruyere@remicrodex.com" },
]
readme = "README.md"

dependencies = []


[project.urls]
Repository = "https://github.com/cewlgruyere/Ballsdex-leaderboard-pack-v3"
Documentation = "https://github.com/cewlgruyere/Ballsdex-leaderboard-pack-v3#readme"
Issues = "https://github.com/cewlgruyere/Ballsdex-leaderboard-pack-v3/issues"
